--- a/views/index.hbs
+++ b/views/index.hbs
@@ -53,7 +53,7 @@
     <input type="text" name="input-mname" id="input-mname">
 
     <label for="input-lname">Last Name: </label>
-    <input type="text" name="input-lname" id="input-lname">
+    <input type="text" name="input-lname" id="input-lname" required>
 
     <label for="input-email">Email Address: </label>
     <input type="email" name="input-email" id="input-email">
@@ -62,11 +62,14 @@
     <input type="url" name="input-website" id="input-website">
 
     <label for="input-isRetired">Is this author retired: </label>
-    <input list="isRetired">
-        <datalist id="isRetired">
+    <input list="input-isRetired">
+        <datalist id="input-isRetired">
             <option value="Yes">
             <option value="No">
         </datalist>
+
+    <label for="input-hIndex">h-index: </label>
+    <input type="number" name="input-hIndex" id="input-hIndex">
 
     <input type="submit">
 </form>
