--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <!-- index.hbs -->
-<h1>The server is running!</h1>
-<p>If you see this text, the server is <strong>definitely</strong> working!</p>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
 {{!-- Create a table --}}
 <table id="Authors-table">
@@ -16,6 +16,7 @@
                 {{@key}}
             </th>
             {{/each}}
+            <th>delete</th>
         </tr>
     </thead>
 
@@ -33,10 +34,12 @@
             <td>{{this.websiteURL}}</td>
             <td>{{this.isRetired}}</td>
             <td>{{this.hIndex}}</td>
+            <td><button onclick="deleteAuthor({{this.authorID}})">Delete</button></td>
         </tr>
         {{/each}}
     </tbody>
 </table>
+<script src="./js/delete_author.js"></script>
 
 <!-- /views/index.hbs -->
 
