--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,10 +1,19 @@
+<!--
+// Citation:
+// Date: 3/1/24
+// Based on nodejs-starter-app
+// This code's logic and structure is unoriginal. It has been adapted to work 
+// for our group's schema. 
+// Source URL: https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main
+-->
+
 <!-- main.hbs-->
 
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Example App</title>
+    <title>Academic Paper Database</title>
 </head>
 <body>
 
