--- a/views/index.hbs
+++ b/views/index.hbs
@@ -53,7 +53,7 @@
 <!-- /views/index.hbs -->
 
 {{!-- Form to add a record to the table  --}}
-<h2>Adding Data with AJAX</h2>
+<h2>Add New Author</h2>
 <p>To add a new author, please enter their information below and click 'Submit'!</p>
 <form id="add-author-form-ajax">
     <legend>Add Author</legend>
