--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,6 +14,7 @@
 <head>
     <meta charset="utf-8">
     <title>Academic Paper Database</title>
+    <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
