added home page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,91 +1,11 @@
 <!--
 // Citation:
-// Date: 3/1/24
+// Date: 3/6/24
 // Based on nodejs-starter-app
 // This code's logic and structure is unoriginal. It has been adapted to work 
 // for our group's schema. 
 // Source URL: https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main
 -->
 
-<!-- index.hbs -->
-
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-
-{{!-- Create a table --}}
-<table id="Authors-table">
-
-    {{!-- Header section --}}
-    <thead>
-
-        {{!-- For just the first row, we print each key of the row object as a header cell so we
-        know what each column means when the page renders --}}
-        <tr>
-            {{#each data.[0]}}
-            <th>
-                {{@key}}
-            </th>
-            {{/each}}
-            <th>delete</th>
-        </tr>
-    </thead>
-
-    {{!-- Body section --}}
-    <tbody>
-
-        {{!-- For each row, print the attributes, in order --}}
-        {{#each data}}
-        <tr>
-            <td>{{this.authorID}}</td>
-            <td>{{this.firstName}}</td>
-            <td>{{this.middleName}}</td>
-            <td>{{this.lastName}}</td>
-            <td>{{this.email}}</td>
-            <td>{{this.websiteURL}}</td>
-            <td>{{this.isRetired}}</td>
-            <td>{{this.hIndex}}</td>
-            <td><button onclick="deleteAuthor({{this.authorID}})">Delete</button></td>
-        </tr>
-        {{/each}}
-    </tbody>
-</table>
-<script src="./js/delete_author.js"></script>
-
-<!-- /views/index.hbs -->
-
-{{!-- Form to add a record to the table  --}}
-<h2>Add New Author</h2>
-<p>To add a new author, please enter their information below and click 'Submit'!</p>
-<form id="add-author-form-ajax">
-    <legend>Add Author</legend>
-
-    <label for="input-fname">First Name: </label>
-    <input type="text" name="input-fname" id="input-fname">
-
-    <label for="input-mname">Middle Name: </label>
-    <input type="text" name="input-mname" id="input-mname">
-
-    <label for="input-lname">Last Name: </label>
-    <input type="text" name="input-lname" id="input-lname" required>
-
-    <label for="input-email">Email Address: </label>
-    <input type="email" name="input-email" id="input-email">
-
-    <label for="input-website">Website URL: </label>
-    <input type="url" name="input-website" id="input-website">
-
-    <label for="input-isRetired">Is this author retired: </label>
-    <input list="input-isRetired">
-        <datalist id="input-isRetired">
-            <option value="Yes">
-            <option value="No">
-        </datalist>
-
-    <label for="input-hIndex">h-index: </label>
-    <input type="number" name="input-hIndex" id="input-hIndex">
-
-    <input type="submit">
-</form>
-
-{{!-- Embed our javascript to handle the DOM manipulation and AJAX request --}}
-<script src="./js/add_author.js"></script>
-
+<h1>Research Paper Tracker</h1>
+<h2>A place to track newly published research papers.</h2>
