--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -17,8 +17,36 @@
     <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <header>
+        <h1>Academic Paper Database</h1>
 
-    {{{body}}}
+        <nav>
+            <a href="/">Home</a>
+            &nbsp;
+
+            <a href="/conferences">Conferences</a>
+            &nbsp;
+
+            <a href="/papers">Papers</a>
+            &nbsp;
+            
+            <a href="/authors">Authors</a>
+            &nbsp;
+            
+            <a href="/paperAuthors">Paper Authors</a>
+            &nbsp;
+            
+            <a href="/organizations">Organizations</a>
+            &nbsp;
+            
+            <a href="/authorOrganizations">Author Organizations</a>
+            &nbsp;
+        </nav>
+    </header>
+
+    <main>
+        {{{body}}}
+    </main>
 
 </body>
 </html>
