--- a/views/authorOrganizations.hbs
+++ b/views/authorOrganizations.hbs
@@ -46,40 +46,27 @@
 
 <!-- /views/authorOrganizations.hbs -->
 
-{{!-- Form to add a record to the table 
+{{!-- Form to add a record to the table  --}}
 <h2>Add New Author-Organization</h2>
 <p>To add a new author-organization, please enter their information below and click 'Submit'!</p>
-<form id="add-author-form-ajax">
+<form id="add-authorOrganization-form-ajax">
     <legend>Add Author-Organization</legend>
 
-    <label for="input-fname">First Name: </label>
-    <input type="text" name="input-fname" id="input-fname">
+    <label for="input-orgName">Organization Name: </label>
+    <input type="text" name="input-orgName" id="input-orgName" required>
 
-    <label for="input-mname">Middle Name: </label>
-    <input type="text" name="input-mname" id="input-mname">
-
-    <label for="input-lname">Last Name: </label>
+    <label for="input-lname">Author Last Name: </label>
     <input type="text" name="input-lname" id="input-lname" required>
 
-    <label for="input-email">Email Address: </label>
-    <input type="email" name="input-email" id="input-email">
+    <label for="input-startDate">Author Start Date: </label>
+    <input type="date" name="input-startDate" id="input-startDate" required>
 
-    <label for="input-website">Website URL: </label>
-    <input type="url" name="input-website" id="input-website">
-
-    <label for="input-isRetired">Is this author retired: </label>
-    <input list="input-isRetired">
-        <datalist id="input-isRetired">
-            <option value="Yes">
-            <option value="No">
-        </datalist>
-
-    <label for="input-hIndex">h-index: </label>
-    <input type="number" name="input-hIndex" id="input-hIndex">
+    <label for="input-endDate">Author End Date: </label>
+    <input type="date" name="input-endDate" id="input-endDate">
 
     <input type="submit">
-</form> --}}
+</form>
 
 {{!-- Embed our javascript to handle the DOM manipulation and AJAX request --}}
-{{!-- <script src="./js/add_author.js"></script> --}}
+<script src="./js/add_authorOrganization.js"></script>
 
