add paper handles NULL

--- a/views/papers.hbs
+++ b/views/papers.hbs
@@ -56,7 +56,7 @@
     <input type="text" name="input-title" id="input-title" required>
 
     <label for="input-yearPublished">Year Published: </label>
-    <input type="number" name="input-yearPublished" id="input-yearPublished">
+    <input type="number" name="input-yearPublished" id="input-yearPublished" required>
 
     <label for="input-numCitations">Number of Citations: </label>
     <input type="number" name="input-numCitations" id="input-numCitations">
