--- a/views/authors.hbs
+++ b/views/authors.hbs
@@ -74,11 +74,11 @@
     <input type="url" name="input-website" id="input-website">
 
     <label for="input-isRetired">Is this author retired: </label>
-    <input list="input-isRetired">
-        <datalist id="input-isRetired">
-            <option value="Yes">
-            <option value="No">
-        </datalist>
+    <select name="input-isRetired" id="input-isRetired">
+        <option value=""></option>
+        <option value="1">Yes</option>
+        <option value="0">No</option>
+    </select>
 
     <label for="input-hIndex">h-index: </label>
     <input type="number" name="input-hIndex" id="input-hIndex">
