added basic css

--- a/views/authorOrganizations.hbs
+++ b/views/authorOrganizations.hbs
@@ -11,6 +11,8 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
+<h2>Author Organizations Table</h2>
+
 {{!-- Create a table --}}
 <table id="AuthorOrganizations-table">
 
@@ -47,8 +49,6 @@
 <!-- /views/authorOrganizations.hbs -->
 
 {{!-- Form to add a record to the table  --}}
-<h2>Add New Author-Organization</h2>
-<p>To add a new author-organization, please enter their information below and click 'Submit'!</p>
 <form id="add-authorOrganization-form-ajax">
     <legend>Add Author-Organization</legend>
 
