--- a/views/authors.hbs
+++ b/views/authors.hbs
@@ -11,6 +11,8 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
+<h2>Authors Table</h2>
+
 {{!-- Create a table --}}
 <table id="Authors-table">
 
@@ -53,8 +55,6 @@
 <!-- /views/index.hbs -->
 
 {{!-- Form to add a record to the table  --}}
-<h2>Add New Author</h2>
-<p>To add a new author, please enter their information below and click 'Submit'!</p>
 <form id="add-author-form-ajax">
     <legend>Add Author</legend>
 
