--- a/views/papers.hbs
+++ b/views/papers.hbs
@@ -11,6 +11,8 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
+<h2>Papers Table</h2>
+
 {{!-- Create a table --}}
 <table id="Papers-table">
 
@@ -50,8 +52,6 @@
 <!-- /views/authorOrganizations.hbs -->
 
 {{!-- Form to add a record to the table  --}}
-<h2>Add New Paper</h2>
-<p>To add a new paper, please enter its information below and click 'Submit'!</p>
 <form id="add-paper-form-ajax">
     <legend>Add Paper</legend>
 
