--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,17 +3,18 @@
 
 
 /*   ----- Imports  -----  */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 /*   ----- Variables  -----  */
 /* :root {
   }
    */
   /*  ----- Viewport ----- elements inherited by all remaining elements ----- */
-  /* * {
-  }
-
   body {
-  } */
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
 
   /*  ----- Page layout blocks -----  */
   /* header {
@@ -39,13 +40,18 @@
   a:visited {} */
   
    /* ----- Navigation ----- Override text links for navigation only.  */
-  /* nav {
+  nav {
+    background-color: lightgrey;
+    padding: 10px;
   }
   nav a {
+    text-decoration: none;
+    color: black;
   }
   nav a:hover {
+      color: red;
   }
-  
+  /*
   .local {
   }
   .local a {
@@ -61,7 +67,11 @@
   dt {}
   dd {} */
   
-  /* h1, h2, h3, h4, h5, h6 {}  */
+  h1, h2, h3, h4, h5, h6 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  } 
   /* h1 {}
   h2 {}
   h3 {}
@@ -98,39 +108,69 @@
   table {
     border: 1px solid;
     border-collapse: collapse;
+    margin-top: 15px;
   }
   /* caption {}
   thead {}
   tbody {}
   tfoot {}
-  tr {}
-    tr:nth-child(even) {} */
+  tr {} */
   th {
     border: 1px solid;
+    padding: 10px;
   }
   td {
     border: 1px solid;
+    padding: 10px;
   }
+  /* tr:nth-child(even) {
+    background-color: lightgrey;
+  } */
+  
     /* td:nth-child(1) {}
   colgroup {}
   data {}
   datalist {} */
   
   /*  ----- Form ----- */
-  /* form {}
-  fieldset {}
-    legend {}
-  label {}
-  button {}
-  input {}
+  form {
+    border: 1px solid black;
+    margin-top: 50px;
+    padding: 10px;
+    width: fit-content;
+  }
+  /* fieldset {} */
+    legend {
+      font-family: "Roboto", sans-serif;
+      font-weight: 700;
+      font-style: normal;
+      margin-top: -20px;
+      border: 1px solid black;
+      background: white;
+      width: fit-content;
+      padding: 5px;
+    }
+  label {
+    display: block;
+    margin-top: 10px;
+  }
+  button {
+  }
+  input[type=text], input[type=email], input[type=url] {
+    width: 400px;
+  }
+  input[type=submit] {
+    display: block;
+    margin-top: 15px;
+  }
   select {}
     optgroup {}
     option {}
-  textarea {}
+  textarea {
+  }
   output {}
   meter {}
-  progress {} */
-  
+  progress {}  
   
   /* ----- Media ----- */
   /* figure {}
