--- a/views/papers.hbs
+++ b/views/papers.hbs
@@ -36,7 +36,7 @@
 
         {{!-- For each row, print the attributes, in order --}}
         {{#each data}}
-        <tr data-value={{this.id}}>
+        <tr data-value={{this.paperID}}>
             <td>{{this.paperID}}</td>
             <td>{{this.title}}</td>
             <td>{{this.yearPublished}}</td>
