--- a/public/css/main.css
+++ b/public/css/main.css
@@ -122,6 +122,8 @@
   td {
     border: 1px solid;
     padding: 10px;
+    text-align: center; 
+    margin: auto;
   }
   /* tr:nth-child(even) {
     background-color: lightgrey;
@@ -155,6 +157,7 @@
     margin-top: 10px;
   }
   button {
+    text-align: center;
   }
   input[type=text], input[type=email], input[type=url] {
     width: 400px;
