null values for authorOrg

--- a/views/authorOrganizations.hbs
+++ b/views/authorOrganizations.hbs
@@ -72,7 +72,7 @@
     <input type="date" name="input-startDate" id="input-startDate" required>
 
     <label for="input-endDate">Author End Date: </label>
-    <input type="date" name="input-endDate" id="input-endDate">
+    <input type="date" name="input-endDate" id="input-endDate" required>
 
     <input type="submit">
 </form>
