--- a/views/paperAuthors.hbs
+++ b/views/paperAuthors.hbs
@@ -72,4 +72,4 @@
 </form>
 
 {{!-- Embed our javascript to handle the DOM manipulation and AJAX request --}}
-{{!-- <script src="./js/add_paperAuthor.js"></script> --}}
+<script src="./js/add_paperAuthor.js"></script>
