--- a/public/css/main.css
+++ b/public/css/main.css
@@ -140,6 +140,7 @@
     margin-top: 50px;
     padding: 10px;
     width: fit-content;
+    max-width: 600px;
   }
   /* fieldset {} */
     legend {
@@ -166,7 +167,9 @@
     display: block;
     margin-top: 15px;
   }
-  select {}
+  select {
+    max-width: 500px;
+  }
     optgroup {}
     option {}
   textarea {
