--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,3 @@
-/*  ===== MOBILE styles (reside at the top and are inherited by all devices) ===== */
-/*  ===== See tablet, desktop, and print @media queries at the bottom. */
-
-
 /*   ----- Imports  -----  */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
@@ -170,13 +166,13 @@
   select {
     max-width: 500px;
   }
-    optgroup {}
+    /* optgroup {}
     option {}
   textarea {
   }
   output {}
   meter {}
-  progress {}  
+  progress {}   */
   
   /* ----- Media ----- */
   /* figure {}
