--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,4 +8,4 @@
 -->
 
 <h1>Research Paper Tracker</h1>
-<h2>A place to track newly published research papers.</h2>
+<p>A place to track newly published research papers.</p>
