Update required fields organizations.hbs

--- a/views/organizations.hbs
+++ b/views/organizations.hbs
@@ -49,13 +49,13 @@
 <form id="add-organization-form-ajax">
     <legend>Add Organization</legend>
 
-    <label for="input-orgName">Organization Name: </label>
+    <label for="input-orgName">*Organization Name: </label>
     <input type="text" name="input-orgName" id="input-orgName" required>
 
-    <label for="input-country">Country: </label>
+    <label for="input-country">*Country: </label>
     <input type="text" name="input-country" id="input-country" required>
 
-    <label for="input-isUniversity">Is this a university: </label>
+    <label for="input-isUniversity">*Is this a university: </label>
     <select name="input-isUniversity" id="input-isUniversity" required>
         <option value=""></option>
         <option value="1">Yes</option>
