--- a/views/authors.hbs
+++ b/views/authors.hbs
@@ -64,7 +64,7 @@
     <label for="input-mname">Middle Name: </label>
     <input type="text" name="input-mname" id="input-mname">
 
-    <label for="input-lname">Last Name: </label>
+    <label for="input-lname">*Last Name: </label>
     <input type="text" name="input-lname" id="input-lname" required>
 
     <label for="input-email">Email Address: </label>
