Update required field paperAuthors.hbs

--- a/views/paperAuthors.hbs
+++ b/views/paperAuthors.hbs
@@ -81,7 +81,7 @@
     <p>To update a Paper Author record, select the "Edit" button in the above table in the row that you'd like to update. Then, use the drop-downs in this form to set the desired paper title and author last name. Hit the submit button to submit your changes.
     </p>
 
-    <label for="paper-author-id-update">Paper Author ID</label>
+    <label for="paper-author-id-update">*Paper Author ID</label>
     <input type="text" id="paper-author-id-update" disabled required/>
 
     <label for="input-pname-update">Paper Name: </label>
