Update required field papers.hbs

--- a/views/papers.hbs
+++ b/views/papers.hbs
@@ -55,10 +55,10 @@
 <form id="add-paper-form-ajax">
     <legend>Add Paper</legend>
 
-    <label for="input-title">Paper Title: </label>
+    <label for="input-title">*Paper Title: </label>
     <input type="text" name="input-title" id="input-title" required>
 
-    <label for="input-yearPublished">Year Published: </label>
+    <label for="input-yearPublished">*Year Published: </label>
     <input type="number" name="input-yearPublished" id="input-yearPublished" required>
 
     <label for="input-numCitations">Number of Citations: </label>
