Update required field conferences.hbs

--- a/views/conferences.hbs
+++ b/views/conferences.hbs
@@ -53,10 +53,10 @@
 <form id="add-conferences-form-ajax">
     <legend>Add Conference</legend>
 
-    <label for="input-cname">Conference Name: </label>
+    <label for="input-cname">*Conference Name: </label>
     <input type="text" name="input-cname" id="input-cname" required>
 
-    <label for="input-year">Year: </label>
+    <label for="input-year">*Year: </label>
     <input type="number" name="input-year" id="input-year" required>
 
     <label for="input-city">City: </label>
