Update required field authorOrganizations.hbs

--- a/views/authorOrganizations.hbs
+++ b/views/authorOrganizations.hbs
@@ -68,10 +68,10 @@
         {{/each}}
     </select>
 
-    <label for="input-startDate">Author Start Date: </label>
+    <label for="input-startDate">*Author Start Date: </label>
     <input type="date" name="input-startDate" id="input-startDate" required>
 
-    <label for="input-endDate">Author End Date: </label>
+    <label for="input-endDate">*Author End Date: </label>
     <input type="date" name="input-endDate" id="input-endDate" required>
 
     <input type="submit">
