--- a/views/paperAuthors.hbs
+++ b/views/paperAuthors.hbs
@@ -7,7 +7,7 @@
 // Source URL: https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main
 -->
 
-<!-- authors.hbs -->
+<!-- paperAuthors.hbs -->
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
